--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/SketchIO/intern-project-kaleidoscope#readme",
   "dependencies": {
-    "jquery": "^3.5.1"
+    "@babel/runtime": "^7.12.5",
+    "jquery": "^3.5.1",
+    "spectrum-colorpicker": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -39,6 +42,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-provide-global-plugin": "0.0.1"
   }
 }
